BE - RowOverextensionPrevention - reduce method complexity and break statements 4 code smells fixed